fix: css layout bugs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,12 +47,15 @@
 
 .header a{
     text-decoration: none;
+    border-bottom-left-radius: 15px;
+    border-top-right-radius: 15px;
+
     color: white;
-    font-size: 30px;
+    font-size: 1.5rem;
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
-    border-radius: 6px;
+    border: 1px solid white;
     
 }
 
